--- a/GameProject.CSharp.csproj
+++ b/GameProject.CSharp.csproj
@@ -265,17 +265,17 @@
     <Compile Include="Assets\Logic\Script\YQ2Common\SpinWithMouse.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Ballistic.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\BallisticFactory.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Collision\CircleGraphics.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Collision\CollisionGraphics.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Collision\ICollisionGraphics.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Collision\RectGraphics.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Collision\SectorGraphics.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\EffectsFactory.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\ItemSelecter.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Looper.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Observer.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\QuadTree.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\SDataUtils.cs" />
-    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\Collision\CircleGraphics.cs" />
-    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\Collision\CollisionGraphics.cs" />
-    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\Collision\ICollisionGraphics.cs" />
-    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\Collision\RectGraphics.cs" />
-    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\Collision\SectorGraphics.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\CollisionDetectionFormulaItem.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\FormulaConstructor.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\FormulaParamsPacker.cs" />
@@ -287,6 +287,7 @@
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\PointToPointFormulaItem.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\SkillFormulaItem.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\SkillManager.cs" />
+    <Compile Include="Assets\Logic\Script\YQ2Common\Util\Skill\SlideCollisionDetectionFormulaItem.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\TargetSelecter\ISelectWeightData.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\TargetSelecter\Member.cs" />
     <Compile Include="Assets\Logic\Script\YQ2Common\Util\TargetSelecter\MemberItemType.cs" />
