--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,9 @@
 .svn/pristine/d0/d00ed174627769705c3f1bcb121b3661df27a57d.svn-base
 .svn/pristine/e0/e0778dc3da0e23086cb3c4ba4fdffc0dca9f6de5.svn-base
 .svn/pristine/e1/e1842e3995488c1e32841964f652968188fc477d.svn-base
+Assets/UnityVS.meta
+Assets/UnityVS/Editor.meta
+Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll
+Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Bridge.dll.meta
+Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll
+Assets/UnityVS/Editor/SyntaxTree.VisualStudio.Unity.Messaging.dll.meta
